budgetzero/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budgetzero
  namespace: finance
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: budgetzero
    app.kubernetes.io/name: budgetzero
  type: ClusterIP
